--- a/bin/config.json
+++ b/bin/config.json
@@ -1,14 +1,14 @@
 {
     "profile" : "NAME", // ../id/NAME/wishlist
-
+    "digest" : false,
+    
     "mail" : {
         "smtp" : "127.0.0.1",
-        "port" : 25,
+        "port" : 111,
         "username" : "aaa",
         "password" : "bbb"
     },
 
-    "subjectplus" : "[SteamGiftsBOT] You've won something!",
-    "subjectminus" : "[SteamGiftsBOT] Something wrong",
-    "recipient" : "your@mail.com"
+   "subjecttag" : "[SteamGiftsBOT]",
+   "recipient" : "your@mail.com"
 }
