Update Readme Change files structure Add static files for web application

--- a/files/config.example.json
+++ b/files/config.example.json
@@ -5,7 +5,7 @@
     "mail" : {
         "smtp" : "<smtp.address>",
         "port" : <smtp.port.number>,
-        "username" : "<smtp.username",
+        "username" : "<smtp.username>",
         "password" : "<smtp.password>"
     },
 
