Config through web-app Update structures and json Update readme

--- a/assets/config.example.json
+++ b/assets/config.example.json
@@ -4,12 +4,15 @@
 
     "mail" : {
         "smtp" : "<smtp.address>",
-        "port" : <smtp.port.number>,
+        "port-num" : <smtp.port.number>,
         "username" : "<smtp.username>",
         "password" : "<smtp.password>"
     },
 
     "subjecttag" : "[SteamGiftsBOT]",
-    "recipient" : "<recipient>"
-}
+    "recipient" : "<recipient>",
 
+    "httpauth" : "<web-app-login>",
+    "httppwd" : "<web-app-password>",
+    "web-port-num" : <web-app.port.number>
+}
