--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,4 +14,6 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go build -v ./...
+      run: |
+        cd sgbot
+        go build -v ./...
